--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+<meta name="format-detection" content="telephone=yes">
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>这就是一个测试界面</title>
+		<title></title>
 	</head>
 	<body>
-		<h1>我们都是好孩子</h1>
+		<div class="tel">
+			<a href='tel:13434774588'>呼叫帅哥</a>
+		</div>
 	</body>
 </html>
