--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title></title>
 	</head>
 	<body>
-		<div style="height: 100vh;text-align: center;display: flex;flex-direction: column; justify-content: center;">
-			<h1><a href='tel:13434774588'>呼叫帅哥</a></h1>
+		<div style="height: 100vh;text-align: center;display: flex;flex-direction: column; justify-content: center;font-size: 100px;">
+			<a href='tel:13434774588'>呼叫帅哥</a>
 		</div>
 	</body>
 </html>
