--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title></title>
 	</head>
 	<body>
-		<div style="height: 100vh;text-align: center;display: flex;flex-direction: column; justify-content: center;font-size: 100px;">
+		<div style="height: 100vh;text-align: center;display: flex;flex-direction: column; justify-content: center;font-size: 100rpx;">
 			<a href='tel:13434774588'>呼叫帅哥</a>
 		</div>
 	</body>
